web.whatsapp.com

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>WhatsApp redirect page</title>
 </head>
 <body>
-    <h5>Пожалуйста, подождите...</h5>
+    <p>Redirecting, please wait...</p>
 </body>
 </html>
