--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,6 @@
     <script src="scripts/index.js"></script>
 </head>
 <body>
-    <webview src="https://web.whatsapp.com"></webview>
+    <webview src="https://web.whatsapp.com" partition="persist:whatsapp"></webview>
 </body>
 </html>
