--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>WhatsApp</title>
+    <title>WhatsWeb</title>
     <link href="styles/style.css" rel="stylesheet">
     <script src="scripts/index.js"></script>
 </head>
