First OK Messages commit

--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>WhatsWeb</title>
+    <title>OK Messages</title>
     <link href="styles/style.css" rel="stylesheet">
     <script src="scripts/index.js"></script>
 </head>
 <body>
-    <webview src="https://web.whatsapp.com" partition="persist:whatsapp"></webview>
+    <webview src="https://ok.ru/messages" partition="persist:okmessages"></webview>
 </body>
 </html>
