--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <script src="scripts/index.js"></script>
 </head>
 <body>
+    <div class="loader"></div>
     <webview src="https://ok.ru/messages" partition="persist:okmessages"></webview>
 </body>
 </html>
