--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div class="loader"></div>
-    <webview src="https://ok.ru/messages" partition="persist:okmessages"></webview>
+    <webview src="https://s.ok.ru/messages" partition="persist:okmessages"></webview>
 </body>
 </html>
